# Agentops-Evalbench-MCP

./: .dockerignore  .env.example  .gitattributes  .gitignore  AgentOps_EvalBench_MCP_Project_Overview.md  Dockerfile  LICENSE  Makefile  PROGRESS.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: eval-gate.yml
.streamlit/: config.toml
data/sample_docs/: sample_ai_policy.md  sample_incident_runbook.md  sample_rag_guidelines.md
data/sample_evals/: evaluator_validation_set.json  sample_testset.json
src/agentops_evalbench/: __init__.py  config.py  database.py  models.py  schemas.py  services.py
src/agentops_evalbench/api/: __init__.py  main.py  routes.py
src/agentops_evalbench/cli/: __init__.py  main.py
src/agentops_evalbench/dashboard/: __init__.py  streamlit_app.py
src/agentops_evalbench/evaluation/: __init__.py  cost_tracker.py  evaluator.py  metrics.py  validation.py
src/agentops_evalbench/mcp_server/: __init__.py  server.py
src/agentops_evalbench/rag/: __init__.py  document_loader.py  rag_pipeline.py  vector_store.py
src/agentops_evalbench/reports/: __init__.py  exporter.py
tests/: conftest.py  test_api_health.py  test_cost_tracker.py  test_evaluator.py  test_evaluator_validation.py  test_metrics.py  test_report_exporter.py
