[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentops-evalbench-mcp"
version = "0.1.0"
description = "MCP-powered LLM evaluation and observability platform for testing RAG and agentic AI systems."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "AgentOps EvalBench" }]
keywords = ["llm", "evaluation", "rag", "mcp", "observability", "ragas", "openai"]

# ---- Core dependencies -------------------------------------------------
# Kept intentionally small so `pip install -e .` yields a working core
# (config, DB, evaluation metrics, cost tracking, reports, API, CLI, tests).
# Heavier RAG/eval stacks live in optional-dependencies below.
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "SQLAlchemy>=2.0",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "typer>=0.12",
    "rich>=13.7",
]

[project.optional-dependencies]
db = ["alembic>=1.13", "psycopg[binary]>=3.1"]
rag = [
    "openai>=1.30",
    "tiktoken>=0.7",
    "chromadb>=0.5",
    "langchain>=0.2",
    "langchain-openai>=0.1",
    "langchain-community>=0.2",
    "langgraph>=0.1",
    "pypdf>=4.2",
]
eval = ["ragas>=0.1", "deepeval>=0.21"]
dashboard = ["streamlit>=1.33", "plotly>=5.20", "pandas>=2.2"]
mcp = ["mcp>=1.0"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.4", "black>=24.0"]
all = [
    "agentops-evalbench-mcp[db,rag,eval,dashboard,mcp,dev]",
]

[project.scripts]
# Terminal entry point:  agentops-eval --help
agentops-eval = "agentops_evalbench.cli.main:app"

[project.urls]
Homepage = "https://github.com/AbhinavVarma02/Agentops-Evalbench-MCP"

[tool.setuptools.packages.find]
where = ["src"]

# =====================================================================
# Tooling configuration
# =====================================================================
[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
# E/F = pyflakes+pycodestyle, I = isort, UP = pyupgrade, B = bugbear
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]  # line length handled by black

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency-injection idiom relies on function calls in argument
# defaults (Depends/Query), which is correct here — don't flag it as B008.
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
# --basetemp forces pytest's tmp_path/tmpdir fixtures to use a repo-local,
# git-ignored directory. Keeping it under .validation avoids stale ACL issues
# with older temp directories in restricted Windows sandboxes.
addopts = "-q --basetemp=.validation/pytest_tmp"
filterwarnings = ["ignore::DeprecationWarning"]
